--- a/DevBytes-starter/app/build.gradle
+++ b/DevBytes-starter/app/build.gradle
@@ -101,4 +101,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
 
+    // WorkManager dependency
+    def work_version = "1.0.1"
+    implementation "android.arch.work:work-runtime-ktx:$work_version"
+
+
 }
