--- a/RoomWordSample/build.gradle
+++ b/RoomWordSample/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
+
     repositories {
         google()
         jcenter()
@@ -25,4 +26,14 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+
+     roomVersion = '2.2.0'
+     archLifecycleVersion = '2.2.0-beta01'
+     androidxArchVersion = '2.1.0'
+     coreTestingVersion = "2.1.0"
+     coroutines = '1.2.0'
+     materialVersion = "1.0.0"
 }
